@@ -4,6 +4,7 @@ export(wbart, mc.wbart, pwbart, mc.wbart.gse, mc.pwbart)
 export(pbart, mc.pbart)
 export(gbart, mc.gbart)
 export(gbmm, mc.gbmm)
+export(surv.gbmm)
 export(abart, mc.abart)
 ##export(spbart, mc.spbart)
 export(stratrs, rs.pbart)
@@ -14,6 +15,7 @@ export(surv.pre.bart, surv.bart, surv.pwbart, mc.surv.bart, mc.surv.pwbart)
 export(recur.pre.bart, recur.bart, recur.pwbart, mc.recur.bart, mc.recur.pwbart)
 export(crisk.pre.bart, crisk.bart, mc.crisk.bart, mc.crisk.pwbart)
 export(crisk2.bart, mc.crisk2.bart, mc.crisk2.pwbart)
+export(crisk3.bart, crisk3.pre.bart)
 export(crisk2.mbart, mc.crisk2.mbart, mc.crisk2.mbart.pwbart)
 export(mc.cores.openmp)
 export(rtnorm, draw_lambda_i, rtgamma)
